tests/sqlite/ui-common/caveat_string_literal_section_marker.stderr
error: sql_forge!: section {#def} has no mapping
 --> tests/sqlite/tmp-ui/caveat_string_literal_section_marker.rs:9:9
  |
9 |         r#"SELECT id, name FROM users WHERE name = "abc{#def}""#,
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
